# Orphan

./: .gitattributes  .gitignore  README.md  docker-compose.yaml
client/: .eslintrc.json  package-lock.json  package.json  schema.graphql
client/src/: App.jsx
client/src/api/: environment.js  phenotypes.js
client/src/components/: AppBar.jsx  AreaBtn.jsx  Phenotype.jsx  (+6 more)
nlp/: Dockerfile  pyproject.toml  server.py  start.sh
nlp/lib/: scoring.py
nlp/server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nlp/src/: encode_phenotypes.py  lookup_phenotypes.py
nlp/src/lib/: encoding.py  scoring.py
scraper/: Cargo.toml  test.html
scraper/html/: experts_list.html  scrapped.html
scraper/src/: main.rs
scraper/src/models/: mod.rs  orphan_center.rs
scripts/: config.js  disorders.js  disorders_classification.js  disorders_classifications.js  package-lock.json  package.json  phenotype_classifications.js  phenotypes.js  phenotypes_classification.js  setup.js
scripts/models/: Disorder.js  Phenotype.js
server/: .eslintrc.json  Dockerfile  package-lock.json  package.json  queries.js  schema.graphql  server.js
server/config/: custom-environment-variables.yml  default.yml
server/controllers/: phenotypes.js
server/lib/: Db.js  disorder.js  phenotype.js
server/public/: asset-manifest.json  index.html  precache-manifest.31093159e4a087c5095876bf56d7ed03.js  service-worker.js
server/resolvers/: disorder.js  phenotype.js
server/routes/: dev.js
server/scripts/: disorders.js  disorders_classification.js  phenotypes.js  phenotypes_classification.js  setup.js
(+16 files in other folders)
