[tool.poetry]
name = "orphan"
version = "0.1.0"
description = ""
authors = ["Mohamed Baaziz <mha.baaziz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
torch = "^1.3"
transformers = "^2.1"
scikit-learn = "^0.21.3"
sentence-transformers = "^0.2.3"
bert-serving-server = "^1.9"
bert-serving-client = "^1.9"
np = "^1.0"
nltk = "^3.4"
autocorrect = "^0.4.4"
pymongo = "^3.9"
flask = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
