[package]
name = "scraper"
version = "0.1.0"
authors = ["Mohamed Baaziz <mha.baaziz@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.22"
scraper = "0.11.0"
select = "0.4.3"
prettytable-rs = "0.8.0"
simple-error = "0.2.1"
mongodb = "0.9.0"
bson = "0.14.0"
serde = "1.0.104"
itertools = "0.8.2"
strum = "0.17.1"
strum_macros = "0.17.1"
linked-hash-map = "0.5.2"
